# mcp-cli

./: Cargo.toml  README.md
assets/: rules.default.txt
src/: main.rs
