[package]
name = "mcp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.36", features = ["io-std", "io-util", "macros", "rt-multi-thread", "process", "time"] }
tree-sitter = "0.26.8"
tree-sitter-bash = "0.23.0"
